--- a/src/creators.html
+++ b/src/creators.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>AI for Writers</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles/creators.css">
     </head>
     
     <body>
@@ -37,5 +37,3 @@
         <a href="https://docs.google.com/presentation/d/12BgctBfkYIDZ7_2eLzA1No9qje6jYU1t/edit#slide=id.p3">Final Presentation Slides</a>
     </body>
 </html>
-
-
