--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>AI for Writers</title>
-        <link rel="stylesheet" href="/styles/main_page.css" type="text/css" />
+        <link rel="stylesheet" href="styles/index.css" type="text/css" />
     </head>
 
     <body>
