--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,6 @@
             </div>
         </div>
 
-        <script src="/src/build/src/index.js"></script>
+        <script src="./build/src/index.js" type="module"></script>
     </body>
 </html>
